--- a/style.css
+++ b/style.css
@@ -106,3 +106,52 @@ html, body{
     background-color: #888;
     border-radius: 50%;
 }
+
+#second{
+    color: white;
+    padding-right: 10vw;
+    background-color: black;
+    padding-top: 120px;
+    width: 100%;
+    height: 100vh;
+}
+
+.elem{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 3vw 3vw;
+    padding-right: 0;
+    border-top: 1px solid #888;
+}
+
+.elem h1{
+    text-transform: uppercase;
+    font-size: 5.7vw;
+    opacity: .6;
+}
+
+.elemlast{
+    border-bottom: 1px solid #888;
+}
+
+.elem img{
+    height: 120%;
+    display: none;
+    z-index: 999;
+    position: absolute;
+}
+
+#about{
+    width: 100%;
+    background-color: black;
+    padding: 10vw 5vw;
+    color: white;
+}
+
+#about img{
+    height: 15vw;
+    width: 15vw;
+}
