--- a/style.css
+++ b/style.css
@@ -79,18 +79,19 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: end;
-    background-color: red;
     width: fit-content;
 }
 
 .blockText h5{
-    background-color: yellow;
     text-transform: uppercase;
     font-size: 15px;
     text-align: right !important;
 }
 
 #chottiheadings{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
     margin-top: 100px;
     padding-right: 40px;
 }
